aggiunta del follow e ban
