# service/api/Follow.go
@@ -79,6 +79,72 @@ func (rt *_router) followUser(w http.ResponseWriter, r *http.Request, ps httprou
 	_ = json.NewEncoder(w).Encode(follow)
 }
 
+func (rt *_router) isFollowUser(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+
+	// creo l'oggetto di tipo follow
+	var follow Follow
+
+	// prendo l'username personale
+	follow.PersonalUserID = ps.ByName("username")
+
+	// estraggo l'id dal database
+	userID, err := rt.db.CheckUserExists(follow.PersonalUserID)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	// verifico se l'utente esiste
+	if userID == 0 {
+		http.Error(w, err.Error(), http.StatusNotFound)
+		return
+	}
+	// eseguo il controllo di sicurezza
+	err = autentification(r.Header.Get("Authorization"), userID)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusUnauthorized)
+		return
+	}
+
+	// aggiungo all'oggetto follow l'username personale dell'utente
+	follow.FollowUserID = ps.ByName("followid")
+
+	// verifico se l'utente che vuole seguire esiste ed estraggo l'utente
+	userID, err = rt.db.CheckUserExists(follow.FollowUserID)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	// se non esiste l'utente da seguire ritorno errore
+	if userID == 0 {
+		http.Error(w, err.Error(), http.StatusNotFound)
+		return
+	}
+
+	// verifico se l'utente che segue e che vuole seguire non sia lo stesso
+	if follow.PersonalUserID == follow.FollowUserID {
+		http.Error(w, "Utente già seguito", http.StatusBadRequest)
+		return
+	}
+
+	// verifico se segue già l'utente che vuole seguire
+	isFollow, err := rt.db.CheckFollow(follow.PersonalUserID, follow.FollowUserID)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+	if isFollow == true {
+		w.Header().Set("content-type", "application/json")
+		w.WriteHeader(http.StatusCreated)
+		_ = json.NewEncoder(w).Encode(follow)
+	} else {
+		follow.PersonalUserID = ""
+		w.Header().Set("content-type", "application/json")
+		w.WriteHeader(http.StatusCreated)
+		_ = json.NewEncoder(w).Encode(follow)
+	}
+}
+
 func (rt *_router) unfollowUser(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 
 	// creo l'oggetto follow
